--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -2,3 +2,9 @@
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
+
+div#pagination {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 20px;
+}
