registration in backend

--- a/react-app/src/pages/RegistrationPage/RegistrationPage.css
+++ b/react-app/src/pages/RegistrationPage/RegistrationPage.css
@@ -1,6 +1,4 @@
-form#registration > div {
-  display: flex;
-  justify-content: space-between;
+form#registration > div > span {
+  display: none;
   margin-left: 10px;
-  margin-right: 75%;
 }
